# Signals-and-Data-Autumn-2025-student

./: .gitignore  README.md  do_over_todo.md  pyproject.toml  requirements.txt  style_testing.ipynb
assignment_1/: assignment_1.ipynb  assignment_1_solution.ipynb
assignment_2/: Assignment3_solution.ipynb  assignment_2.ipynb  assignment_2_solution.ipynb
assignment_2/.ipynb_checkpoints/: assignment_2_solution-checkpoint.ipynb
assignment_3/: encryptor.py
assignment_3/SignDat-Assign4/: .gitignore  Assignment1_GroupXX.ipynb  Group02.ipynb  README.md  Somefasttext.py  assignment_3_solution.ipynb  decryptor.py  something.py  tester.py
assignment_3/SignDat-Assign4/final project_2021/final project/: Text classification-savedata.ipynb  project-solution.ipynb
assignment_3/SignDat-Assign4/project_2020/project/: Text classification.ipynb  (+2 more)
feedback-sign-dat/: w2_f1.md  w2_f2.md  w2_f3.md  w9_f1.md  w9_f2.md  w9_f3.md
week_1/: ex_week_1.ipynb
week_1/.ipynb_checkpoints/: ex_week_1-checkpoint.ipynb
week_10/: cifar_stl.ipynb  cifar_stl.py  create_dataset.py  ex_10_solutions.ipynb  ex_10_solutions_1.ipynb  ex_10_solutions_2.ipynb  model_classes.py  plotting_function.py  relative_representations.ipynb  train_function.py
week_10/.ipynb_checkpoints/: ex_10_solutions_1-checkpoint.ipynb  relative_representations-checkpoint.ipynb
week_11/: ex_week_11.ipynb
week_12/: ex_week_12_solution.ipynb
week_3/: ex_week_3.ipynb  ex_week_3_solution.ipynb  old_cross_entropy_things.md
week_4/: ex_week_4_solution.ipynb  exercisis_week6_session1.ipynb
week_5/: assignment_2.ipynb  ex_week_5.ipynb  ex_week_5_solution.ipynb  exploration_of_eeg.ipynb  exploration_of_eeg.py
week_7/: ex_week_7.ipynb
week_8/: ex_week_8.ipynb  ex_week_8_solutions.ipynb
week_9/: ex_week_9.ipynb  ex_week_9_solution.ipynb
(+4 files in other folders)
