[project]
name = "signals-and-data-autumn-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel==6.29.5",
    "librosa==0.10.*",
    "matplotlib==3.9.*",
    "mne>=1.10.1",
    "nltk==3.9.*",
    "numpy==1.26.*",
    "pandas==2.2.3",
    "pillow==10.4.*",
    "scipy==1.13.*",
    "seaborn==0.13.2",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm>=4.67.1",
]
